[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lumeq"
version = "0.3.0"
description = "A Python package for electronic structure, dynamics, spin models, and quantum chemistry analysis"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {name = "Zheng Pei", email = "zheng.pei.c@gmail.com"},
]
dependencies = [
  "numpy",
  "scipy",
  "opt_einsum",
  "matplotlib",
  "psutil",
]

[project.optional-dependencies]
pyscf = ["pyscf"]
gpu = ["cupy"]
spins = ["qutip", "cirq", "cirq-google", "sympy"]

[project.urls]
"Homepage" = "https://github.com/Zheng-Pei-c/lumeq"
"Bug Tracker" = "https://github.com/Zheng-Pei-c/lumeq/issues"
